-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17
-
Component/s: hotspot
-
b22
The following assert fails when added to SafePointNode::Ideal because SafePointNodes are often cloned without cloning the linked JVMState:
assert(_jvms == NULL || ((uintptr_t)_jvms->map() & 1) || _jvms->map() == this, "inconsistent JVMState");
This leads to problems likeJDK-8261037.
assert(_jvms == NULL || ((uintptr_t)_jvms->map() & 1) || _jvms->map() == this, "inconsistent JVMState");
This leads to problems like
- duplicates
-
JDK-8266711 [lworld] compiler/valhalla/inlinetypes/TestNullableArrays.java fails after merge
-
- Closed
-
- relates to
-
JDK-8261037 [lworld] Assert during C2 compilation due to inconsistent JVMState at safepoint
-
- Resolved
-