8261158: JVMState should not be shared between SafePointNodes